--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.12"
   },
